--- a/projects-data.json
+++ b/projects-data.json
@@ -10,7 +10,17 @@
     "code": "https://github.com/rmh96/rmh-youtube"
   },
   {
-    "id": 1,
+    "id": 2,
+    "name": "Star Rating Module",
+    "pImg": "./images/npm.png",
+    "imgAlt": "npm-module",
+    "description": "Introducing a Star Rating module designed for seamless integration into any React application. This module facilitates users in rating products or reviews in an virtually pleasing manner, enhance user experience of the application.",
+    "techs": "React, HTML5, CSS3",
+    "demo": "https://codesandbox.io/p/sandbox/star-rating-demo-3z8lng?layout=%257B%2522sidebarPanel%2522%253A%2522EXPLORER%2522%252C%2522rootPanelGroup%2522%253A%257B%2522direction%2522%253A%2522horizontal%2522%252C%2522contentType%2522%253A%2522UNKNOWN%2522%252C%2522type%2522%253A%2522PANEL_GROUP%2522%252C%2522id%2522%253A%2522ROOT_LAYOUT%2522%252C%2522panels%2522%253A%255B%257B%2522type%2522%253A%2522PANEL_GROUP%2522%252C%2522contentType%2522%253A%2522UNKNOWN%2522%252C%2522direction%2522%253A%2522vertical%2522%252C%2522id%2522%253A%2522clt5qwi7w00063b6i883pd31w%2522%252C%2522sizes%2522%253A%255B100%252C0%255D%252C%2522panels%2522%253A%255B%257B%2522type%2522%253A%2522PANEL_GROUP%2522%252C%2522contentType%2522%253A%2522EDITOR%2522%252C%2522direction%2522%253A%2522horizontal%2522%252C%2522id%2522%253A%2522EDITOR%2522%252C%2522panels%2522%253A%255B%257B%2522type%2522%253A%2522PANEL%2522%252C%2522contentType%2522%253A%2522EDITOR%2522%252C%2522id%2522%253A%2522clt5qwi7v00023b6iby45j467%2522%257D%255D%257D%252C%257B%2522type%2522%253A%2522PANEL_GROUP%2522%252C%2522contentType%2522%253A%2522SHELLS%2522%252C%2522direction%2522%253A%2522horizontal%2522%252C%2522id%2522%253A%2522SHELLS%2522%252C%2522panels%2522%253A%255B%257B%2522type%2522%253A%2522PANEL%2522%252C%2522contentType%2522%253A%2522SHELLS%2522%252C%2522id%2522%253A%2522clt5qwi7v00033b6i2t3175zg%2522%257D%255D%252C%2522sizes%2522%253A%255B100%255D%257D%255D%257D%252C%257B%2522type%2522%253A%2522PANEL_GROUP%2522%252C%2522contentType%2522%253A%2522DEVTOOLS%2522%252C%2522direction%2522%253A%2522vertical%2522%252C%2522id%2522%253A%2522DEVTOOLS%2522%252C%2522panels%2522%253A%255B%257B%2522type%2522%253A%2522PANEL%2522%252C%2522contentType%2522%253A%2522DEVTOOLS%2522%252C%2522id%2522%253A%2522clt5qwi7v00053b6i96rot6b6%2522%257D%255D%252C%2522sizes%2522%253A%255B100%255D%257D%255D%252C%2522sizes%2522%253A%255B50%252C50%255D%257D%252C%2522tabbedPanels%2522%253A%257B%2522clt5qwi7v00023b6iby45j467%2522%253A%257B%2522tabs%2522%253A%255B%257B%2522id%2522%253A%2522clt5qwi7v00013b6i8y9rfs47%2522%252C%2522mode%2522%253A%2522permanent%2522%252C%2522type%2522%253A%2522FILE%2522%252C%2522filepath%2522%253A%2522%252Fsrc%252Findex.js%2522%252C%2522state%2522%253A%2522IDLE%2522%257D%255D%252C%2522id%2522%253A%2522clt5qwi7v00023b6iby45j467%2522%252C%2522activeTabId%2522%253A%2522clt5qwi7v00013b6i8y9rfs47%2522%257D%252C%2522clt5qwi7v00053b6i96rot6b6%2522%253A%257B%2522tabs%2522%253A%255B%257B%2522id%2522%253A%2522clt5qwi7v00043b6iexbhi8vo%2522%252C%2522mode%2522%253A%2522permanent%2522%252C%2522type%2522%253A%2522UNASSIGNED_PORT%2522%252C%2522port%2522%253A0%252C%2522path%2522%253A%2522%252F%2522%257D%255D%252C%2522id%2522%253A%2522clt5qwi7v00053b6i96rot6b6%2522%252C%2522activeTabId%2522%253A%2522clt5qwi7v00043b6iexbhi8vo%2522%257D%252C%2522clt5qwi7v00033b6i2t3175zg%2522%253A%257B%2522tabs%2522%253A%255B%255D%252C%2522id%2522%253A%2522clt5qwi7v00033b6i2t3175zg%2522%257D%257D%252C%2522showDevtools%2522%253Atrue%252C%2522showShells%2522%253Afalse%252C%2522showSidebar%2522%253Atrue%252C%2522sidebarPanelSize%2522%253A15%257D",
+    "code": "https://github.com/rmh96/star-rating"
+  },
+  {
+    "id": 3,
     "name": "Grocery Site",
     "pImg": "./images/grocery-cart.png",
     "imgAlt": "grocery-cart",
@@ -20,7 +30,7 @@
     "code": "https://github.com/rmh96/grocery-site"
   },
   {
-    "id": 2,
+    "id": 4,
     "name": "Expense Split Calculator",
     "pImg": "./images/expense-split.png",
     "imgAlt": "expense-split",
@@ -30,7 +40,7 @@
     "code": "https://github.com/rmh96/expense-split-calculator"
   },
   {
-    "id": 3,
+    "id": 5,
     "name": "Harish's Portfolio",
     "pImg": "./images/portfolio.png",
     "imgAlt": "harish-portfolio",
